--- a/public/index.css
+++ b/public/index.css
@@ -1,21 +1,9 @@
-:root{
-    background:#000106;
-  }
-  
-  .centered{
-    position:absolute;
-    left:50vw;
-    top:50vh;
-    transform:translateX(-50%) translateY(-50%) rotateX(15deg);
-    text-align:center;
-    
-  }
-  
-  
-  .neon{
-    font-family:'Neon 80s';
-    font-size:5rem;
-    color:#ffedff;
-    padding:30px;
-    filter:url(#stroke) url(#inner-glow) url(#outer-glow) url(#outer-glow1);
-  }
+h1 {
+ text-align: center;
+ color: red;
+ font-family: 'Stranger Things', sans-serif;
+ font-size: large;
+}
+body{
+    background-color: black;
+}
