--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,8 @@
 h1 {
  text-align: center;
  color: red;
- font-family: 'Stranger Things', sans-serif;
- font-size: 50vh;
+ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ font-size: 20vh;
 }
 body{
     background-color: black;
@@ -12,4 +12,6 @@ body{
     height: 35vh;
     display: flex;
     flex-direction: column;
+    margin-left: 10vh;
+    margin-top: 5vh;
 }
