--- a/public/index.css
+++ b/public/index.css
@@ -26,27 +26,33 @@ body{
     flex-direction: row;
 }
 #vinyl-text{
+    margin-top: 5vh;
+    margin-left: 5vh;
     text-align: left;
     color: red;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2vh; 
-    max-width: 50vh;
+    max-width: 75vh;
 }
 #cassette-text{
+    margin-top: 5vh;
+    margin-left: 5vh;
     text-align: left;
     color: red;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2vh; 
-    max-width: 50vh;
+    max-width: 75vh;
 
 }
 #vinyl-btn{
+ margin-left: 10vh;
  color: red;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: 2vh; 
  background-color: black;
 }
 #cassette-btn {
+    margin-left: 10vh;
     color: red;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2vh; 
