added functionality to buttons

--- a/public/index.css
+++ b/public/index.css
@@ -45,7 +45,8 @@ body{
 
 }
 #vinyl-btn{
- border: 1vh solid red;
+    max-height: fit-content;
+ border: .25vh solid red;
  margin-left: 10vh;
  color: red;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -53,7 +54,8 @@ body{
  background-color: black;
 }
 #cassette-btn {
-    border: 1vh solid red;
+    max-height: fit-content;
+    border: .25vh solid red;
     margin-left: 10vh;
     color: red;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
