--- a/public/index.css
+++ b/public/index.css
@@ -47,6 +47,7 @@ body{
 #vinyl-btn{
     max-height: 3vh;
  border: .25vh solid red;
+ margin-top: 5vh;
  margin-left: 10vh;
  color: red;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -57,6 +58,7 @@ body{
     max-height: 3vh;
     border: .25vh solid red;
     margin-left: 10vh;
+    margin-top: 5vh;
     color: red;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2vh; 
