--- a/public/index.css
+++ b/public/index.css
@@ -6,6 +6,7 @@ h1 {
 }
 body{
     background-color: black;
+     background-image: url("https://images3.alphacoders.com/882/thumbbig-882548.webp");
 }
 .product-pic {
     width: 35vh;
