--- a/public/index.css
+++ b/public/index.css
@@ -6,7 +6,10 @@ h1 {
 }
 body{
     background-color: black;
-     background-image: url("https://images3.alphacoders.com/882/thumbbig-882548.webp");
+     background-image: url("https://images7.alphacoders.com/726/thumb-1920-726772.jpg");
+     background-repeat: no-repeat;
+     background-position: center;
+
 }
 .product-pic {
     width: 35vh;
