--- a/public/index.css
+++ b/public/index.css
@@ -8,7 +8,7 @@ body{
     background-color: black;
      background-image: url("https://images7.alphacoders.com/726/thumb-1920-726772.jpg");
      background-repeat: no-repeat;
-     background-position: center;
+     background-position: top;
 
 }
 .product-pic {
