--- a/public/index.css
+++ b/public/index.css
@@ -68,3 +68,26 @@ body{
     font-size: 2vh; 
     background-color: black;
 }
+a {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: var(--color);
+    transition: all 200ms ease-out;
+  }
+  
+  a:hover {
+    font-size: 1.6rem;
+  }
+  
+  a:hover ~ hr {
+    width: 100%;
+  }
+  
+  hr {
+    width: 0px;
+    height: 3px;
+    background: var(--underline);
+    border: var(--underline);
+    margin: 0px;
+    transition: width 450ms ease-out;
+  }
