--- a/public/index.css
+++ b/public/index.css
@@ -68,18 +68,16 @@ body{
     font-size: 2vh; 
     background-color: black;
 }
-a {
+#cassette-btn {
     text-decoration: none;
-    font-size: 1.5rem;
-    color: var(--color);
     transition: all 200ms ease-out;
   }
   
-  a:hover {
-    font-size: 1.6rem;
+  #cassette-btn:hover {
+    size: 5vh;
   }
   
-  a:hover ~ hr {
+  #cassette-btn:hover ~ hr {
     width: 100%;
   }
   
