--- a/public/index.css
+++ b/public/index.css
@@ -79,6 +79,7 @@ body{
     flex-direction: column;
   } */
 a {
+  border: .25vh solid red;
   text-decoration: none;
   font-size: 1.5rem;
   color: red;
