background for text adjustments

--- a/public/index.css
+++ b/public/index.css
@@ -31,7 +31,8 @@ body{
 }
 #vinyl-text{
     background-color: black;
-    background-size: auto;
+    opacity: 0.3;
+    background-size: contain;
     margin-top: 5vh;
     margin-left: 5vh;
     text-align: left;
@@ -42,7 +43,8 @@ body{
 }
 #cassette-text{
     background-color: black;
-    background-size: auto;
+    opacity: 0.3;
+    background-size: contain;
     margin-top: 5vh;
     margin-left: 5vh;
     text-align: left;
