background creation of parent

--- a/public/index.css
+++ b/public/index.css
@@ -30,8 +30,6 @@ body{
     flex-direction: row;
 }
 #vinyl-text{
-    background-color: black;
-    background-size:cover;
     margin-top: 5vh;
     margin-left: 5vh;
     text-align: left;
@@ -42,8 +40,6 @@ body{
     max-height: 18vh;
 }
 #cassette-text{
-    background-color: black;
-    background-size: contain;
     margin-top: 5vh;
     margin-left: 5vh;
     text-align: left;
@@ -52,39 +48,19 @@ body{
     font-size: 2vh; 
     max-width: 75vh;
     max-height: 18vh;
-    
-
 }
-/* #vinyl-btn{
-    max-height: 3vh;
- border: .25vh solid red;
- margin-top: 5vh;
- margin-left: 10vh;
- color: red;
- font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
- font-size: 2vh; 
- background-color: black;
+.background-text {
+background-color: black;
+opacity: .3;
+max-height: 18vh ;
+max-width: 75vh;
+margin-top: 5vh;
+margin-left: 10vh;
 }
-#cassette-btn {
-    max-height: 3vh;
-    border: .25vh solid red;
-    margin-left: 10vh;
-    margin-top: 5vh;
-    color: red;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 2vh; 
-    background-color: black;
-} */
 :root {
     --font: red;
     --underline: red;
   }
- /* .hover-me {
-    width: 115px;
-    margin: 0px auto;
-    display: flex;
-    flex-direction: column;
-  } */
 a {
     max-height: 1.6rem;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
