--- a/public/index.css
+++ b/public/index.css
@@ -3,6 +3,12 @@ h1 {
  color: red;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: 4vh;
+ text-shadow:
+ 3px 3px 0 #000,
+-1px -1px 0 #000,  
+1px -1px 0 #000,
+-1px 1px 0 #000,
+ 1px 1px 0 #000;
 }
 body{
     background-color: black;
